# tetris-game

./: .gitignore  CMakeLists.txt  README.md  install_sfml3.sh
include/: Board.h  Cell.h  Panel.h  Settings.h  Shape.h  tetrominoes.h  utils.h
src/: Board.cpp  Cell.cpp  Panel.cpp  Shape.cpp  main.cpp  tetrominoes.cpp
